--- a/FileWork.csproj
+++ b/FileWork.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.97.0" />
     <PackageReference Include="NPOI" Version="2.7.1" />
   </ItemGroup>
 
